--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,6 +13,20 @@ $navbar-default-bg: black;
 	letter-space: -1px;
 }
 
-.card-panel {
-	width: 25%;
+.panel-card {
+  margin: auto;
+	width: 65%;
+}
+
+.panel-card_group {
+	width: 70%;
+	margin: auto;
+}
+
+.card-name {
+	text-align: center;
+	text-weight: bold;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	color: #fff;
 }
