--- a/app/views/traits/index.html.erb
+++ b/app/views/traits/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Trait#index</h1>
-<p>Find me in app/views/trait/index.html.erb</p>
+<h1 align='center'>Listing of Card Traits</h1>
+<div align='center'>
+	<%= will_paginate %>
+	<% @traits.each do |trait| %>
+	  <ul class='listing'>
+	  	<div class='row'>
+	  		<div class='well col-md-4 col-md-offset-4'>
+			  	<li class='trait-value'><%= link_to "#{trait.name}", trait_path(trait) %></li>
+			  	<li><%= pluralize(trait.cards.count, "Cards") %></li>
+			  </div>
+			</div>
+	  </ul>
+	<% end %>
+	<%= will_paginate %>
+</div>
+
