--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -19,6 +19,15 @@
   	</div>
   </div>
 
+  <div class='form-group'>
+    <!-- <div class='col-sm-1'></div> -->
+    <div class='col-sm-offset-1 col-sm-3'>
+      <div class='row'>
+        <div class='col-sm-offset-1 col-sm-6 form-add-trait'>Add Card Traits</div>
+      </div>      
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
     	<%= f.submit class: 'btn btn-primary btn-lg' %>
