--- a/app/views/traits/_form.html.erb
+++ b/app/views/traits/_form.html.erb
@@ -6,7 +6,15 @@
 		<div class='control-label col-sm-2'>
 			<%= f.label :name %>
 		</div>
-		<div class 'col-sm-4'>
+		<div class='col-sm-4'>
 			<%= f.text_field :name, class: 'form-control', placeholder: 'Enter a trait' %>
 		</div>
 	</div>
+
+  <div class='form-group'>
+  	<div class='col-sm-offset-2 col-sm-10'>
+  		<%= f.submit class: 'btn btn-success btn-lg' %>
+  	</div>
+  </div>
+
+	<% end %>
