Added nested_form_fields gem, customizing form layout with nested fields for card trait- work in progress

--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -28,6 +28,36 @@
     </div>
   </div>
 
+  <div class='form-group'>
+    <div class='control-label col-sm-12'>
+      <div class='col-sm-offset-1 col-sm-10'>
+        <div class='row'>
+          <div class='col-sm-offset-1 col-sm-8 form-nested-field'>
+            <%= f.nested_fields_for :traits do |ff| %>        
+              <%= ff.remove_nested_fields_link "remove", class: 'btn btn-danger', role: 'button' %>
+              <%= ff.label 'Trait' %>
+              <%= ff.text_field :name %>
+
+              <%= form_for(@card_traits, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+                <div class='form-group'>
+                  <div class='control-label col-sm-2'>   
+                    <%= f.label :value %>
+                  </div>
+                  <div class='col-sm-4'>
+                    <%= f.text_field :value, class: "form-control", placeholder: "Enter trait value" %>
+                  </div>
+                </div>
+              <% end %>
+              
+
+            <% end %>
+            <%= f.add_nested_fields_link :traits, "Add a trait", class: 'btn btn-primary', role: 'button' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
     	<%= f.submit class: 'btn btn-primary btn-lg' %>
