--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,7 @@ $navbar-default-bg: black;
 
 #nav-logo {
 	text-transform: uppercase;
-	text-weight: bold;
+	font-weight: bold;
 	color: #fff;
 	float: left;
 	font-size: 1.7em;
@@ -25,7 +25,7 @@ $navbar-default-bg: black;
 
 .card-name {
 	text-align: center;
-	text-weight: bold;
+	font-weight: bold;
 	font-size: 1.2em;
 	text-transform: uppercase;
 	color: #fff;
@@ -35,4 +35,23 @@ $navbar-default-bg: black;
 	font-weight: bold;
 	text-align: center;
 	font-size: 1.7em;
+}
+
+.trait-display-name {
+	font-weight: bold;
+	font-size: 1.1em;
+	left: 20px;
+}
+
+.trait-display-value {
+	text-align: center;
+}
+
+.show-card-table {
+	width: 50%;
+	margin: auto;
+}
+
+.show-card-trait {
+	width: 70%;
 }
