Completed first pass card edit, updated card show

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,7 @@ $navbar-default-bg: black;
 
 .panel-card {
   margin: auto;
-	width: 65%;
+	width: 55%;
 }
 
 .panel-card_group {
@@ -54,4 +54,15 @@ $navbar-default-bg: black;
 
 .show-card-trait {
 	width: 70%;
+}
+
+.card-edit-warning {
+	font-style: italic;
+	font-size: .9em;
+	text-align: center;
+}
+
+.edit-card {
+	margin: auto;
+	width: 20%;
 }
