--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -5,15 +5,13 @@
 
 
 <% get_traits(@card.id) %>
-<!-- <div class='well well-sm'> -->
-	<table class='table table-striped show-card-table'>
-    <% @trait_values.each do |trait_name, trait_value| %>
+<table class='table table-striped show-card-table'>
+  <% @trait_values.each do |trait_name, trait_values| %>
 
-      <tr>
-      	<td class='trait-display-name show-card-trait'><%= trait_name %>:</td>
-      	<td class='trait-display-value'><%= trait_value %></td>
-      </tr>									      
-    
-    <% end %>	
-  </table> 
-<!-- </div>  -->
+    <tr>
+    	<td class='trait-display-name show-card-trait'><%= trait_name %>:</td>
+    	<td class='trait-display-value'><%= trait_values[0] %></td>
+    </tr>									      
+  
+  <% end %>	
+</table> 
