--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,17 +1,30 @@
-<h1 align='center'><%= @card.name %></h1>
+<!-- <h1 align='center'><%= @card.name %></h1> -->
+
+
+
+<div class="panel panel-info single-card">
+
+  <div class="panel-heading card-name clearfix">
+  	<%= link_to @card.name, card_path(@card) %>
+  </div>
+  
+  
+  <div class="panel-body">
+	  <% get_traits(@card.id) %>
+  	<table class='table table-striped'>
+	    <% @trait_values.each do |trait_name, trait_values| %>
+
+	      <tr>
+	      	<td class='trait-display-name'><%= link_to trait_name, trait_path(trait_values[1])  %>:</td>
+	      	<td class='trait-display-value'><%= trait_values[0] %></td>
+	      </tr>									      
+	    
+	    <% end %>	
+    </table> 
+	</div>		
+
+</div>
+<br>
 <div align="center">
 	<%= link_to "Edit", edit_card_path(@card.id), class: 'btn btn-primary' %>
 </div>
-
-
-<% get_traits(@card.id) %>
-<table class='table table-striped show-card-table'>
-  <% @trait_values.each do |trait_name, trait_values| %>
-
-    <tr>
-    	<td class='trait-display-name show-card-trait'><%= trait_name %>:</td>
-    	<td class='trait-display-value'><%= trait_values[0] %></td>
-    </tr>									      
-  
-  <% end %>	
-</table> 
