--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,7 @@ $navbar-default-bg: black;
 
 .panel-card {
   margin: auto;
-	width: 55%;
+	width: 350px;
 }
 
 .panel-card_group {
@@ -64,5 +64,5 @@ $navbar-default-bg: black;
 
 .single-card {
 	margin: auto;
-	width: 20%;
+	width: 385px;
 }
