--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,10 @@ $navbar-default-bg: black;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.hidden_option {
+	display: none;
+}
+
 #nav-logo {
 	text-transform: uppercase;
 	font-weight: bold;
