--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -15,7 +15,16 @@
       <%= f.label 'Type' %>
     </div>
     <div class='col-sm-8'>
-      <%= f.collection_select :type_id, Type.order(:name), :id, :name, include_blank: true %>
+      <%= f.collection_select :type_id, Type.order(:name), :id, :name, {include_blank: true}, {class: 'card_type_selector'} %>
+    </div>
+  </div>
+
+  <div class='form-group hidden_option'>
+    <div class='control-label col-sm-2'>
+      <%= f.label 'Type' %>
+    </div>
+    <div class='col-sm-8'>
+      <%= f.label "test" %>
     </div>
   </div>
 
