--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -36,12 +36,22 @@
         </li>
 
       </ul>
-      <form class="navbar-form navbar-left">
+      <div class='form-group'>
+        <%= form_tag(search_card_path, remote: true, :method => 'get', id: 'search-form') do %>
+          <%= text_field_tag :search_text, params[:search_text], class: 'navbar-form navbar-left form-control', placeholder: "Find a card" %>
+          <div class='search_button'>
+            <%= button_tag(type: :submit, class: 'navbar-left btn btn-primary') do %>
+              Search
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+     <!--  <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search Card">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
