Added link between traits and types, added new table ClassCard to associate cards that belong to certain class cards

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,10 @@ $navbar-default-bg: black;
 	text-align: center;
 }
 
+.trait-listing {
+	list-style: none;
+}
+
 .show-card-table {
 	width: 50%;
 	margin: auto;
