--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -21,10 +21,10 @@
 
   <div class='form-group hidden_option'>
     <div class='control-label col-sm-2'>
-      <%= f.label 'Type' %>
+      <%= f.label 'Class' %>
     </div>
     <div class='col-sm-8'>
-      <%= f.label "test" %>
+      <%= f.collection_select :card_id, Card.order(:name), :id, :name, {include_blank: true}, {class: 'class_type_selector'} %>
     </div>
   </div>
 
