--- a/app/views/traits/_form.html.erb
+++ b/app/views/traits/_form.html.erb
@@ -11,6 +11,15 @@
 		</div>
 	</div>
 
+	<div class='form-group'>
+    <div class='control-label col-sm-2'>
+      <%= f.label 'Card Type' %>
+    </div>
+    <div class='col-sm-8'>
+      <%= f.collection_select :type_id, Type.order(:name), :id, :name, {include_blank: true}, {class: 'card_type_selector'} %>
+    </div>
+  </div>
+
   <div class='form-group'>
   	<div class='col-sm-offset-2 col-sm-10'>
   		<%= f.submit class: 'btn btn-success btn-lg' %>
