--- a/app/views/traits/index.html.erb
+++ b/app/views/traits/index.html.erb
@@ -2,11 +2,12 @@
 <div align='center'>
 	<%= will_paginate %>
 	<% @traits.each do |trait| %>
-	  <ul class='listing'>
+	  <ul class='trait-listing'>
 	  	<div class='row'>
 	  		<div class='well col-md-4 col-md-offset-4'>
-			  	<li class='trait-value'><%= link_to "#{trait.name}", trait_path(trait) %></li>
-			  	<li><%= pluralize(trait.cards.count, "Cards") %></li>
+			  	<li><font  class='trait-display-name'><%= link_to "#{trait.name}", trait_path(trait) %></font> (<%= pluralize(trait.cards.count, "Cards") %>)</li>
+			  	<% type_value = Type.where(id: trait.type_id).first %>
+			  	<li>Card Type: <%= link_to "#{type_value.name}", type_path(type_value) if type_value %></li>
 			  </div>
 			</div>
 	  </ul>
