--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -37,7 +37,7 @@
 
       </ul>
       <div class='form-group'>
-        <%= form_tag(search_card_path, remote: true, :method => 'get', id: 'search-form') do %>
+        <%= form_tag(search_card_path, :method => 'get', id: 'search-form') do %>
           <%= text_field_tag :search_text, params[:search_text], class: 'navbar-form navbar-left form-control', placeholder: "Find a card" %>
           <div class='search_button'>
             <%= button_tag(type: :submit, class: 'navbar-left btn btn-primary') do %>
